--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,5 @@
-sources:
-  "aisleriot-3.6.1.tar.xz": 46888b7a09eccfa10176e55b53eec73c50c7f20a
+removed_sources:
+  aisleriot-3.6.1.tar.xz: 46888b7a09eccfa10176e55b53eec73c50c7f20a
   aisleriot-3.6.2.tar.xz: 3e11ed6845a25de1be2513743eb8e068cd4c36ce
+sources:
+  aisleriot-3.16.1.tar.xz: 52b2254ddadf1351ceb8117624694bb4694a9e40
