--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  aisleriot-3.22.10.tar.xz: 6e3fd9fba3c2e54e188b32666a1136b36297d07b
+  aisleriot-3.22.10.tar.bz2: 6e3fd9fba3c2e54e188b32666a1136b36297d07b
